--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
                 <p>Fast Hire follows these steps for their referral program</p>
             </div>
             <div>
-            	<img src="media/referral_profs.png" id="myimage" alt="" style=" width:1000px">
+            	<img src="media/referral_profs.PNG" id="myimage" alt="" style=" width:1000px">
             </div>
             <br>
             <hr>
                 <div>
-                	<img src="media/referral_candidate.png" id="myimage" alt="" style=" width:1000px">
+                	<img src="media/referral_candidate.PNG" id="myimage" alt="" style=" width:1000px">
                 </div>
 
             </div>
