--- a/index.html
+++ b/index.html
@@ -38,16 +38,13 @@
                 <div class="animated-icon2"><span></span><span></span><span></span><span></span></div>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: #f2ffe6">
-                <ul class="navbar-nav nav ms-auto">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: #f2ffe6; text-align: end;">
+                <ul class="navbar-nav nav ms-auto" onclick="toggleNav()">
                     <li class="nav-item" style="background-color: #f2ffe6">
                         <a class="nav-link " href="#about"><strong>About</strong> </a>
                     </li>
                     <li class="nav-item" style="background-color: #f2ffe6">
                         <a class="nav-link " href="#working"><strong>How It Works</strong></a>
-                    </li>
-                    <li class="nav-item" style="background-color: #f2ffe6">
-                        <a class="nav-link " href="#referral"><strong>Process</strong></a>
                     </li>
                     <!-- <li class="nav-item" style="background-color: #f2ffe6">
                         <a class="nav-link " href="#">Community (Coming Soon)</a>
@@ -220,36 +217,19 @@
                 <p>Fast Hire follows these steps for their referral program</p>
             </div>
             <div style="text-align: center;">
-                <img id="proSteps" alt="" style="width:1000px"/>
+                <img id="candidateSteps" alt="" style="width:1000px"/>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" class="btn btn-primary" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" target="_blank">Apply Now</a>
             </div>
             <br>
             <hr>
                 <div style="text-align: center;">
-                    <img id="refreeSteps" alt="" style="width:1000px">
+                    <img id="referrerSteps" alt="" style="width:1000px">
                     <a href="https://forms.gle/iYyczSj1cXPubqeU9" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" class="btn btn-primary" target="_blank">Apply Now</a>
                 </div>
 
             </div>
         </div>
-
-
-        <!-- HOW IT WORKS ENDS  -->
-
-          <!-- REFERRALS -->
-
-          <div class="section-6" id="referral">
-            <div class="container-fluid feature-main-heading py-3 my-3">
-                <h3><strong>Get Started with Us </strong></h3>
-                <p>To Find Referrals From Professionals Working At Some Of The Best Companies In The World</p>
-            </div>
-        </div>
-
-        <!-- REFERRALS ENDS  -->
-
-
-
-
+        <hr/>
        <!-- FAQ  -->
        <div class="container my-5 working-container" id="faq">
         <div class="container-fluid feature-main-heading py-3 my-3">
@@ -257,11 +237,33 @@
             
         </div>
         <div>
-        	<ul>
-        		<li><strong> Is this Program for me ? </strong></li>
-        		<p> This program is for everyone who wants to get in a company via referrals. </p>
-        		<li> write ques </li>
-        	</ul>
+        	<details>
+                <summary>What is the FastHire Referral Program?</summary>
+                <p>The Fasthire program helps candidates find a referral in their target company in minimum time duration. You need to fill a form in the apply section and wait for further communication from our team. In the form, you need to fill in basic details,resume and job description for target role.</p>
+            </details>
+            <details>
+                <summary>Is there any fee for the referral program?</summary>
+                <p>The FastHire referral program is completely free.</p>
+            </details>
+            <details>
+                <summary>How many referral applications can I apply for?</summary>
+                <p>You can apply for a referral in one company only once in 6 Months. Our platform will automatically filter out duplicate applications.</p>
+            </details>
+            <details>
+                <summary>Will I get shortlisted for an interview after applying?</summary>
+                <p>No,a referral application is not a confirmation for an interview call. Only profiles relevant to the job opening will be shared further. But, the profiles shared by us have a good probability of receiving an interview call from a recruiter.
+                </p>
+            </details>
+            <details>
+                <summary>Why should I refer candidates from the FastHire platform?</summary>
+                <p>The job-hunting process is emotional and comes with plenty of ups                                                     and down.We are building a community which will help candidates to go through job hunt phase without hassle and to connect with professionals in their target companies.</p>
+            </details>
+            <details>
+                <summary>For  which roles  can I find referrals through the FastHire Referral Program?
+                </summary>
+                <p>Currently ,We are focussed on Technology  and Data Science related roles.We will soon be expanding our help in other  job roles.
+                </p>
+            </details>
         </div>
     <!-- FAQ ENDS  -->
 
@@ -271,7 +273,7 @@
         <h3><strong>Contact Us</strong></h3>        
     </div>
     <div class='contactUsText'>
-        For any queries feel free to drop us a note at   <span class="emailId">fastreferral@gmail.com</span>
+        For any queries feel free to drop your concerns at <span class="emailId">fastreferral@gmail.com</span>
     </div>
 
     </div>
