--- a/index.html
+++ b/index.html
@@ -214,17 +214,16 @@
         <div class="container my-5 working-container" id="working">
             <div class="container-fluid feature-main-heading py-3 my-3">
                 <h3><strong>How It Works</strong></h3>
-                <p>Fast Hire follows these steps for their referral program</p>
             </div>
             <div style="text-align: center;">
                 <img id="candidateSteps" alt="" style="width:1000px"/>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" class="btn btn-primary" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" target="_blank">Apply Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" class="btn btn-primary" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" target="_blank">Request a referral</a>
             </div>
             <br>
             <hr>
                 <div style="text-align: center;">
                     <img id="referrerSteps" alt="" style="width:1000px">
-                    <a href="https://forms.gle/iYyczSj1cXPubqeU9" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" class="btn btn-primary" target="_blank">Apply Now</a>
+                    <a href="https://forms.gle/iYyczSj1cXPubqeU9" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" class="btn btn-primary" target="_blank">Start referring</a>
                 </div>
 
             </div>
@@ -239,7 +238,7 @@
         <div>
         	<details>
                 <summary>What is the FastHire Referral Program?</summary>
-                <p>The Fasthire program helps candidates find a referral in their target company in minimum time duration. You need to fill a form in the apply section and wait for further communication from our team. In the form, you need to fill in basic details,resume and job description for target role.</p>
+                <p>The Fasthire program helps candidates find a referral in their target company. Candidates are required to fill  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" target="_blank">this</a> form and wait for further communication from our team. The form requires your basic details, resume and job description for target role.</p>
             </details>
             <details>
                 <summary>Is there any fee for the referral program?</summary>
@@ -247,21 +246,21 @@
             </details>
             <details>
                 <summary>How many referral applications can I apply for?</summary>
-                <p>You can apply for a referral in one company only once in 6 Months. Our platform will automatically filter out duplicate applications.</p>
+                <p>You can apply for any number of roles. But, only one time for a particular position in a particular organisation in a span of 6 months. Duplicate applications will automatically be discarded.</p>
             </details>
             <details>
                 <summary>Will I get shortlisted for an interview after applying?</summary>
-                <p>No,a referral application is not a confirmation for an interview call. Only profiles relevant to the job opening will be shared further. But, the profiles shared by us have a good probability of receiving an interview call from a recruiter.
+                <p>No, a referral application is not a confirmation for an interview call. Only profiles relevant to the job opening will be shared further. But, the profiles shared by us have a good probability of receiving an interview call from a recruiter.
                 </p>
             </details>
             <details>
                 <summary>Why should I refer candidates from the FastHire platform?</summary>
-                <p>The job-hunting process is emotional and comes with plenty of ups                                                     and down.We are building a community which will help candidates to go through job hunt phase without hassle and to connect with professionals in their target companies.</p>
+                <p>The job-hunting process is emotional and comes with plenty of ups and down. We are building a community to help candidates to go through job hunt phase without hassle and to connect with professionals in their target companies. </p>
             </details>
             <details>
                 <summary>For  which roles  can I find referrals through the FastHire Referral Program?
                 </summary>
-                <p>Currently ,We are focussed on Technology  and Data Science related roles.We will soon be expanding our help in other  job roles.
+                <p>Currently ,We are focussing on Software Engineering and Data Science roles. We will soon be expanding our help in other domains.
                 </p>
             </details>
         </div>
