--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <h3><strong>Contact Us</strong></h3>        
     </div>
     <div class='contactUsText'>
-        For any queries feel free to drop your concerns at <span class="emailId">fastreferral@gmail.com</span>
+        For any queries feel free to drop a note at <span class="emailId">fastreferral@gmail.com</span>
     </div>
 
     </div>
