--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                                     <p>To Help You Break Into Tech</p>
                                 </div>
                             </div>
+                            <div class="topCTAWrapper">
+                                <a href="https://forms.gle/iYyczSj1cXPubqeU9" class="btn btn-primary ctas" target="_blank">I want to Refer</a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" class="btn btn-primary ctas" target="_blank">I need referral</a>
+                                <div></div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-6 order-1 order-sm-2 p-0 ">
@@ -187,13 +192,13 @@
             </div>
             <div style="text-align: center;">
                 <img id="candidateSteps" alt="" style="width:1000px"/>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" class="btn btn-primary" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" target="_blank">Request a referral</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfJe0ttksUGNng9lyCv17FE7K6hNvQUE8wRfHJjY0wE7xuhSA/viewform" class="btn btn-primary ctas" target="_blank">Request a referral</a>
             </div>
             <br>
             <hr>
                 <div style="text-align: center;">
                     <img id="referrerSteps" alt="" style="width:1000px">
-                    <a href="https://forms.gle/iYyczSj1cXPubqeU9" style="background-color:#1a6600; color:white;margin: 40px auto;display: block; width: 180px; padding: 17px;" class="btn btn-primary" target="_blank">Start referring</a>
+                    <a href="https://forms.gle/iYyczSj1cXPubqeU9" class="btn btn-primary ctas" target="_blank">Start referring</a>
                 </div>
 
             </div>
